Fix wrong font url

--- a/app/styles/font.css
+++ b/app/styles/font.css
@@ -52,7 +52,7 @@
 }
 @font-face {
   font-family: 'Museo Sans';
-  src: url('/fonts/MuseoSans_500-Italic-webfont.woff2') format('woff2');
+  src: url('/fonts/MuseoSans_500_Italic-webfont.woff2') format('woff2');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
@@ -87,7 +87,7 @@
 }
 @font-face {
   font-family: 'Museo Sans';
-  src: url('/fonts/MuseoSans_700-Italic-webfont.woff2') format('woff2');
+  src: url('/fonts/MuseoSans_700_Italic-webfont.woff2') format('woff2');
   font-weight: 700;
   font-style: italic;
   font-display: swap;
